failing trajectory again